# workstation

./: .gitlab-ci.yml  CLAUDE.md  README.md  setup.sh
.github/workflows/: ci.yml  security.yml
dev-workstation-build/: README.md  audit.sh  install-ai.sh  install-cloud.sh  install-docker.sh  install-dotfiles.sh  install-mcp.sh  install-ops.sh  install-system.sh  install.sh  pyproject.toml
dev-workstation-build/lib/: os.sh
dev-workstation-build/tests/: test_os_detect.bats
skills/claude/grill-me/: SKILL.md
skills/claude/keep-current/: SKILL.md
skills/claude/linkedin-post/: SKILL.md
skills/claude/repo-status/: SKILL.md
skills/claude/security-audit/: SKILL.md
skills/claude/skills/: SKILL.md
skills/claude/splunk-dashboard-gen/: SKILL.md
skills/claude/summarise-session/: SKILL.md
skills/claude/webex-update/: SKILL.md
skills/common/: PROFILE.md  env.sh.template
skills/common/workflows/: grill-me.md  repo-status.md  summarise-session.md
skills/cursor/rules/: grill-me.md  repo-status.md  summarise-session.md
tool-audit/: 2026-04.md
