[project]
name = "riles-ai-env"
version = "0.1.0"
description = "AI/ML Python environment for workstation"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch",
    "torchvision",
    "transformers",
    "diffusers",
    "datasets",
    "accelerate",
    "peft",
    "trl",
    # APIs
    "anthropic",
    "openai",
    # Application frameworks
    "langchain",
    "llama-index",
    "litellm",
    # Embeddings & vector stores
    "sentence-transformers",
    "chromadb",
    # HuggingFace
    "huggingface-hub",
    # Notebooks
    "jupyterlab",
    "ipywidgets",
    # Speech
    "faster-whisper",
    # Utilities
    "python-dotenv",
    "rich",
    "httpx",
    "tqdm",
]

# ── Platform-conditional PyTorch index ────────────────────────────────────────
# Linux x86_64: CUDA 12.4 build  |  macOS / Linux ARM: standard PyPI (CPU/MPS)
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

